@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR

package Model as ModelPackage <<Rectangle>> {
    class "<<interface>>\nReadOnlyAddressBook" as ReadOnlyAddressBook
    class "<<interface>>\nReadOnlyUserPrefs" as ReadOnlyUserPrefs
    class "<<interface>>\nModel" as Model
    class AddressBook
    class ModelManager
    class UserPrefs

    class UniquePersonList
    class Person
    class Supplier
    class Address
    class Email
    class Name
    class Phone
    class Tag

    class I #FFFFFF
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Model

AddressBook .up.|> ReadOnlyAddressBook
UserPrefs .up.|> ReadOnlyUserPrefs
ModelManager .up.|> Model

Model .right.> ReadOnlyUserPrefs
Model .left.> ReadOnlyAddressBook
ModelManager -left-> "1" AddressBook
ModelManager -right-> "1" UserPrefs

AddressBook *--> "1" UniquePersonList
UniquePersonList --> "~* all" Person

Supplier -up-|> Person

Person *--> Name
Person *--> Phone
Person *--> Email
Person *--> Address
Person *--> "*" Tag

ModelManager --> "~* filtered" Person

Person -[hidden]up--> I
UniquePersonList -[hidden]right-> I

Name -[hidden]right-> Phone
Phone -[hidden]right-> Address
Address -[hidden]right-> Email
@enduml
